2010-10-09  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-open-connection): If we have gnutls loaded, then
	try to use that for the tls stream.
	(nnimap-retrieve-group-data-early): Rework the marks code to heed
	UIDVALIDITY and find out which groups are read-only and not.

2010-10-09  Julien Danjou  <julien@danjou.info>

	* nnir.el (nnir-read-parm): Fix call to gnus-completing-read.

	* gnus-gravatar.el (gnus-gravatar-transform-address): Error errors when
	retrieving gravatars.

	* shr.el (shr-table-corner): Add.
	(shr-table-line): Add.
	(shr-insert-table-ruler): Use the above defcustoms to insert tables.

2010-10-08  Julien Danjou  <julien@danjou.info>

	* mm-decode.el (mm-text-html-renderer): Add mm-shr in choice list.

2010-10-08  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-util.el (gnus-alist-pull): Rename `gnus-pull'.

	* gnus-sum.el (gnus-mark-article-as-unread)
	(gnus-summary-mark-article-as-unread, gnus-summary-remove-bookmark)
	(gnus-summary-set-bookmark): Use it.

	* gnus-msg.el (gnus-setup-message): Use it.

	* gnus-demon.el (gnus-demon-remove-handler): Use it.

	* gnus.el (gnus-group-remove-parameter): Use it.

	* gnus-group.el (gnus-group-make-web-group): Use it.

	* gnus-demon.el (gnus-demon-remove-handler): Use it.

	* nnregistry.el: Update docs to mention manual.

	* gnus-registry.el: Update docs to mention nnregistry.el.
	(gnus-registry-initialize): Don't install nnregistry refer method
	automatically.
	(gnus-registry-install-nnregistry): Remove it.

2010-10-08  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-insert): Don't insert double spaces.

2010-10-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-gravatar.el (gnus-treat-from-gravatar)
	(gnus-treat-mail-gravatar): Bind gnus-gravatar-too-ugly to nil when
	called interactively.

	* gnus-art.el (gnus-mime-view-part-externally)
	(gnus-mime-view-part-internally): Make predicate function passed to
	gnus-mime-view-part-as-type assume argument is a mime type, not a list